# nyx

./: profiler_main.py  pyproject.toml
nyx/: __init__.py  curses.py  log.py  starter.py
nyx/panel/: __init__.py
