[tool.poetry]
name = "nyx"
version = "2.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLv3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
memory-profiler = "^0.61.0"
stem = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
